--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "DoneWithIt",
+    "name": "SoCar",
     "slug": "DoneWithIt",
     "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
